[gd_scene load_steps=5 format=3 uid="uid://bsn3dqpj2rcfr"]

[ext_resource type="Script" path="res://ui/dialogue_box/dialogue_box.gd" id="1_sutvo"]
[ext_resource type="Script" path="res://ui/dialogue_box/choices_panel.gd" id="3_o0xma"]
[ext_resource type="Theme" uid="uid://cmodhhki37xu4" path="res://themes/theme1.tres" id="7_vg0na"]
[ext_resource type="PackedScene" uid="uid://bipwe6amgdi60" path="res://managers/audio_manager/audio_manager_interface.tscn" id="8_xxd7d"]

[node name="DialogueBox" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sutvo")
text = "Hello, world  hjfdjhlkdsajhlkdfjhdslkdsjhalafdslkfdslkjhhjlklkjh lkjh lkjh lkjhlkjhafdslafdsladsflfadslasdf"
choices = Array[String](["Yes", "No"])

[node name="ChoicesPanel" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("7_vg0na")
script = ExtResource("3_o0xma")

[node name="Selection" type="ColorRect" parent="ChoicesPanel"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(1, 0, 0, 1)

[node name="ChoicesLabel" type="Label" parent="ChoicesPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme = ExtResource("7_vg0na")
theme_override_font_sizes/font_size = 48

[node name="DialoguePanel" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("7_vg0na")

[node name="DialogueLabel" type="Label" parent="DialoguePanel"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 115.0
offset_bottom = 44.0
theme = ExtResource("7_vg0na")

[node name="AudioManagerInterface" parent="." instance=ExtResource("8_xxd7d")]
